[package]
name = "dwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.4"
num-traits = "0.2.17"
rayon = "1.8.1"
rustfft = "6.2.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "dwt_benchmark"
harness = false